--- a/src/components/burger/burger.module.css
+++ b/src/components/burger/burger.module.css
@@ -12,21 +12,7 @@
 
 @media (max-width: 500px) {
   .burger {
-    width: 400px;
+    width: 100%;
     height: 300px;
-  }
-}
-
-@media (max-width: 400px) {
-  .burger {
-    width: 350px;
-    height: 350px;
-  }
-}
-
-@media (max-width: 350px) {
-  .burger {
-    width: 300px;
-    height: 200px;
   }
 }
